<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    android:background="@drawable/background"
    tools:context=".fragment.MealDetailsToOrderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mealImage2IVFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="0dp"
                android:layout_height="@dimen/_298sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/meal_details_bg"
                android:elevation="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mealPriceTVFragment" />

            <TextView
                android:id="@+id/mealDescriptionTVFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_regular"
                android:gravity="left|top"
                android:text=""
                android:textColor="#292929"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView35"
                app:layout_constraintStart_toStartOf="@+id/textView35"
                app:layout_constraintTop_toTopOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="@dimen/_112sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_38sdp"
                android:background="@drawable/padding_btn"
                android:elevation="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/mealAddToCartTVFragment"
                app:layout_constraintEnd_toEndOf="@+id/textView35"
                app:layout_constraintTop_toBottomOf="@+id/mealDescriptionTVFragment" />

            <TextView
                android:id="@+id/mealAllSalareTVFragment"
                android:layout_width="@dimen/_31sdp"
                android:layout_height="@dimen/_31sdp"
                android:background="@drawable/padding_btn"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_regular"
                android:gravity="center"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toStartOf="@+id/textView37"
                app:layout_constraintStart_toStartOf="@+id/textView35"
                app:layout_constraintTop_toTopOf="@+id/textView37" />

            <TextView
                android:id="@+id/mealNumberTVFragment"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_regular"
                android:gravity="center"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="@+id/textView37"
                app:layout_constraintEnd_toEndOf="@+id/textView37"
                app:layout_constraintStart_toStartOf="@+id/textView37"
                app:layout_constraintTop_toTopOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="@dimen/_173sdp"
                android:layout_height="@dimen/_61sdp"
                android:background="@drawable/padding_btn"
                android:elevation="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/mealNameTVFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView33"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="@+id/textView33"
                app:layout_constraintTop_toTopOf="@+id/textView33" />

            <TextView
                android:id="@+id/resturantNameInMealFragmentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_regular"
                android:text=""
                android:textColor="#292929"
                android:textSize="@dimen/_10sdp"
                android:gravity="center|right"
                app:layout_constraintEnd_toEndOf="@+id/mealNameTVFragment"
                app:layout_constraintTop_toBottomOf="@+id/mealNameTVFragment" />

            <TextView
                android:id="@+id/mealPriceTVFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/circle_shape"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_regular"
                android:gravity="center"
                android:text=""
                android:textColor="#292929"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/textView33"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/mealAddToCartTVFragment"
                android:layout_width="@dimen/_166sdp"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginBottom="@dimen/_21sdp"
                android:background="@drawable/padding_btn"
                android:elevation="@dimen/_10sdp"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center"
                android:text="إضافة للسلة"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="@+id/textView35"
                app:layout_constraintEnd_toEndOf="@+id/textView35"
                app:layout_constraintStart_toStartOf="@+id/textView35" />

            <TextView
                android:id="@+id/addButtonTVFragment"
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:background="@drawable/circle_shape"
                android:elevation="@dimen/_10sdp"
                android:gravity="center"
                android:text="+"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="@+id/textView37"
                app:layout_constraintEnd_toEndOf="@+id/textView37"
                app:layout_constraintStart_toEndOf="@+id/mealNumberTVFragment"
                app:layout_constraintTop_toTopOf="@+id/textView37" />

            <TextView
                android:id="@+id/lossButtonTVFragment"
                android:layout_width="@dimen/_19sdp"
                android:layout_height="@dimen/_19sdp"
                android:background="@drawable/circle_shape"
                android:elevation="@dimen/_10sdp"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="@+id/textView37"
                app:layout_constraintEnd_toStartOf="@+id/mealNumberTVFragment"
                app:layout_constraintStart_toStartOf="@+id/textView37"
                app:layout_constraintTop_toTopOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:elevation="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/mealAllSalareTVFragment"
                app:layout_constraintEnd_toEndOf="@+id/mealAllSalareTVFragment"
                app:layout_constraintStart_toStartOf="@+id/mealAllSalareTVFragment"
                app:layout_constraintTop_toTopOf="@+id/mealAllSalareTVFragment" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/white"
                android:elevation="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/mealNumberTVFragment"
                app:layout_constraintEnd_toEndOf="@+id/mealNumberTVFragment"
                app:layout_constraintStart_toStartOf="@+id/mealNumberTVFragment"
                app:layout_constraintTop_toTopOf="@+id/mealNumberTVFragment" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/mealImage1IVFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/signboard_shape"
                    android:elevation="@dimen/_10sdp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>