...
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintEnd_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/resturantNameInMealFragmentTV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInMealFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_23sdp"
        android:layout_marginLeft="@dimen/_23sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
...
